--- a/index.html
+++ b/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <title>GRID</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <h1>CSS grid examples</h1>
-    </header>
-    <div class="continer">
-      <div class="masonry1">Masonri 1</div>
-      <div class="responsive">Responsive</div>
-      <div class="fluid">Fluid</div>
-      <div class="masonry2">masonry2</div>
-      <div class="DOM">DOM order</div>
-      <div class="flexibie">Flexibie Breadth</div>
-      <div class="masonry3">masonry3</div>
-      <div class="tracks">Named Teacks</div>
-      <div class="EXplace">Explisity Placed</div>
-      <div class="negSPACE">Negative Space</div>
-      <div class="overiap">Overiap</div>
+    <h1>CSS Grid exmples</h1>
+    <div class="container">
+      <div class="masonry1 grid">Masonry 1</div>
+      <div class="responsive grid">Responsive</div>
+      <div class="overiep grid">Overiap</div>
+      <div class="fluid grid">Fluid</div>
+      <div class="placed grid">Explicitly Placed</div>
+      <div class="negative grid">Negative Space</div>
+      <div class="masonary3 grid">Masonry III</div>
+      <div class="flexible grid">Flexible Breadth</div>
+      <div class="dom grid">DOM Order</div>
+      <div class="masonary2 grid">Masonry 2</div>
+      <div class="named grid">Named Tracks</div>
     </div>
   </body>
 </html>
